Resolve some warnings and bugs